--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -22,72 +22,68 @@
 
 <section id="validatorSection" class="content-section gray-section">
     <div id="validatorContainer">
-        <div id="results">
-            <div id="rules">
-                <select id="ruleList" name="ruleList">
+        <div id="validatorToolbar">
+            <div id="leftSide">
+                <select id="ruleList" disabled>
                     <option value=""></option>
                 </select>
+                <div id="ruleDescription"></div>
             </div>
-            <div id="ruleDescription"></div>
-            <div id="resultsList"></div>
-        </div>
-        <div id="source">
-            <div id="editorControls">
-                <div id="leftSide">
-                    <button id="downloadLog" disabled>
-                        <img src="~/Images/download.png" />
-                        <div>Download</div>
-                    </button>
-                </div>
-                <div id="rightSide">
-                    Theme:
-                    <select id="themeList" disabled>
-                        <optgroup label="Light">
-                            <option value="ace/theme/chrome">Chrome</option>
-                            <option value="ace/theme/clouds">Clouds</option>
-                            <option value="ace/theme/crimson_editor">Crimson Editor</option>
-                            <option value="ace/theme/dawn">Dawn</option>
-                            <option value="ace/theme/dreamweaver">Dreamweaver</option>
-                            <option value="ace/theme/eclipse">Eclipse</option>
-                            <option value="ace/theme/github">GitHub</option>
-                            <option value="ace/theme/iplastic">IPlastic</option>
-                            <option value="ace/theme/solarized_light">Solarized Light</option>
-                            <option value="ace/theme/textmate">TextMate</option>
-                            <option value="ace/theme/tomorrow">Tomorrow</option>
-                            <option value="ace/theme/xcode">XCode</option>
-                            <option value="ace/theme/kuroir">Kuroir</option>
-                            <option value="ace/theme/katzenmilch">KatzenMilch</option>
-                            <option value="ace/theme/sqlserver" selected>SQL Server</option>
-                        </optgroup>
-                        <optgroup label="Dark">
-                            <option value="ace/theme/ambiance">Ambiance</option>
-                            <option value="ace/theme/chaos">Chaos</option>
-                            <option value="ace/theme/clouds_midnight">Clouds Midnight</option>
-                            <option value="ace/theme/dracula">Dracula</option>
-                            <option value="ace/theme/cobalt">Cobalt</option>
-                            <option value="ace/theme/gruvbox">Gruvbox</option>
-                            <option value="ace/theme/gob">Green on Black</option>
-                            <option value="ace/theme/idle_fingers">idle Fingers</option>
-                            <option value="ace/theme/kr_theme">krTheme</option>
-                            <option value="ace/theme/merbivore">Merbivore</option>
-                            <option value="ace/theme/merbivore_soft">Merbivore Soft</option>
-                            <option value="ace/theme/mono_industrial">Mono Industrial</option>
-                            <option value="ace/theme/monokai">Monokai</option>
-                            <option value="ace/theme/pastel_on_dark">Pastel on dark</option>
-                            <option value="ace/theme/solarized_dark">Solarized Dark</option>
-                            <option value="ace/theme/terminal">Terminal</option>
-                            <option value="ace/theme/tomorrow_night">Tomorrow Night</option>
-                            <option value="ace/theme/tomorrow_night_blue">Tomorrow Night Blue</option>
-                            <option value="ace/theme/tomorrow_night_bright">Tomorrow Night Bright</option>
-                            <option value="ace/theme/tomorrow_night_eighties">Tomorrow Night 80s</option>
-                            <option value="ace/theme/twilight">Twilight</option>
-                            <option value="ace/theme/vibrant_ink">Vibrant Ink</option>
-                        </optgroup>
-                    </select>
-                </div>
+            <div id="rightSide">
+                <button id="downloadLog" disabled>
+                    <img src="~/Images/download.png" />
+                    <div>Download</div>
+                </button>
+                <button id="revalidate" disabled>
+                    <img src="~/Images/reload.png" />
+                    <div>Re-validate</div>
+                </button>
+                <select id="themeList" disabled>
+                    <optgroup label="Light">
+                        <option value="ace/theme/chrome">Chrome</option>
+                        <option value="ace/theme/clouds">Clouds</option>
+                        <option value="ace/theme/crimson_editor">Crimson Editor</option>
+                        <option value="ace/theme/dawn">Dawn</option>
+                        <option value="ace/theme/dreamweaver">Dreamweaver</option>
+                        <option value="ace/theme/eclipse">Eclipse</option>
+                        <option value="ace/theme/github">GitHub</option>
+                        <option value="ace/theme/iplastic">IPlastic</option>
+                        <option value="ace/theme/solarized_light">Solarized Light</option>
+                        <option value="ace/theme/textmate">TextMate</option>
+                        <option value="ace/theme/tomorrow">Tomorrow</option>
+                        <option value="ace/theme/xcode">XCode</option>
+                        <option value="ace/theme/kuroir">Kuroir</option>
+                        <option value="ace/theme/katzenmilch">KatzenMilch</option>
+                        <option value="ace/theme/sqlserver" selected>SQL Server</option>
+                    </optgroup>
+                    <optgroup label="Dark">
+                        <option value="ace/theme/ambiance">Ambiance</option>
+                        <option value="ace/theme/chaos">Chaos</option>
+                        <option value="ace/theme/clouds_midnight">Clouds Midnight</option>
+                        <option value="ace/theme/dracula">Dracula</option>
+                        <option value="ace/theme/cobalt">Cobalt</option>
+                        <option value="ace/theme/gruvbox">Gruvbox</option>
+                        <option value="ace/theme/gob">Green on Black</option>
+                        <option value="ace/theme/idle_fingers">idle Fingers</option>
+                        <option value="ace/theme/kr_theme">krTheme</option>
+                        <option value="ace/theme/merbivore">Merbivore</option>
+                        <option value="ace/theme/merbivore_soft">Merbivore Soft</option>
+                        <option value="ace/theme/mono_industrial">Mono Industrial</option>
+                        <option value="ace/theme/monokai">Monokai</option>
+                        <option value="ace/theme/pastel_on_dark">Pastel on dark</option>
+                        <option value="ace/theme/solarized_dark">Solarized Dark</option>
+                        <option value="ace/theme/terminal">Terminal</option>
+                        <option value="ace/theme/tomorrow_night">Tomorrow Night</option>
+                        <option value="ace/theme/tomorrow_night_blue">Tomorrow Night Blue</option>
+                        <option value="ace/theme/tomorrow_night_bright">Tomorrow Night Bright</option>
+                        <option value="ace/theme/tomorrow_night_eighties">Tomorrow Night 80s</option>
+                        <option value="ace/theme/twilight">Twilight</option>
+                        <option value="ace/theme/vibrant_ink">Vibrant Ink</option>
+                    </optgroup>
+                </select>
             </div>
-            <div id="editor"></div>
         </div>
+        <div id="editor"></div>
     </div>
 </section>
 
@@ -104,27 +100,11 @@
             var markers = [];
             var ruleList = $("#ruleList").selectmenu();
             var downloadButton = $("#downloadLog").button();
+            var revalidateButton = $("#revalidate").button();
 
             var theme = getCookie("editorTheme");
             theme = theme ? theme : "ace/theme/sqlserver";
             var themeList = $("#themeList").selectmenu().val(theme).selectmenu("refresh");
-
-            //var ruleTemplate = `
-            //        <div id="ruleHeader_{RULEID}" class="rule-header">
-            //            <div class="rule-id">
-            //                <div>{RULEID}</div>
-            //                <div id="ruleCount_{RULEID}" class="ruleid-count-badge">0</div>
-            //            </div>
-            //            <div class="rule-desc">{DESCRIPTION}</div>
-            //        </div>
-            //        <div id="results_{RULEID}" class="rule-results-list"></div>
-            //        `;
-            var resultTemplate = `
-                    <div class="rule-result" sourceline="{LINE}">
-                        <div class="rule-result-line">Line {LINE}</div>
-                        <div class="rule-result-snip">{SNIPPET}</div>
-                    </div>
-                    `;
 
             // Rules dictionary: key = rule ID, value = { description, results[] }
             var rulesDictionary = {};
@@ -138,14 +118,13 @@
             }
 
             // Creates HTML for a result and adds it to the corresponding rule's results array
-            function addResult(ruleId, line, snippet) {
-                var html = resultTemplate.replace(/{LINE}/g, line)
-                    .replace(/{SNIPPET}/g, snippet);
-                rulesDictionary[ruleId].results.push({ html: html, line: line });
+            function addResult(ruleId, line) {
+                rulesDictionary[ruleId].results.push({ line: line });
             }
 
             // Creates a SARIF log object from JSON, then processes rules and results
             function processResults(sarif) {
+                rulesDictionary = {};
                 var sarifLog = JSON.parse(sarif);
 
                 for (var i = 0; i < sarifLog.runs.length; i++) {
@@ -172,9 +151,7 @@
                             for (var k = 0; k < result.locations.length; k++) {
                                 // Get the startLine from the result location
                                 var startLine = result.locations[k].physicalLocation.region.startLine;
-                                // Get the defect line from the editor
-                                var snippet = editor.session.getLine(startLine - 1).trim();
-                                addResult(result.ruleId, startLine, snippet);
+                                addResult(result.ruleId, startLine);
                             }
                         }
 
@@ -185,7 +162,9 @@
                         }
 
                         // Clear the dropdown, then add the rules and trigger a change event
-                        $(ruleList).empty();
+                        $("#ruleList option").each(function (index, option) {
+                            $(option).remove();
+                        });
                         $(ruleList).append(options.join("")).selectmenu("refresh").trigger("selectmenuchange");
                     }
                 }
@@ -219,11 +198,70 @@
                 return ext == "sarif";
             }
 
+            function setUpEditor(file, result) {
+                var reader = new FileReader();
+                reader.onload = function () {
+                    if (!editor) {
+                        editor = ace.edit("editor", {
+                            mode: "ace/mode/json",
+                            theme: $(themeList).val(),
+                            selectionStyle: "text",
+                            showPrintMargin: false
+                        });
+                    }
+                    // Get the target file text, excluding the header segment
+                    editor.setValue(atob(reader.result.substring(reader.result.indexOf(',') + 1)));
+                    editor.selection.clearSelection();
+                    $(ruleList).selectmenu("enable");
+                    $(downloadButton).button("enable");
+                    $(revalidateButton).button("enable");
+                    $(themeList).selectmenu("enable");
+
+                    processResults(result);
+                };
+                reader.readAsDataURL(file);
+                fileName = file.name;
+            }
+
+            function submitValidationRequest(file) {
+                // Prevent duplicate submissions
+                if ($dropForm.hasClass("is-busy")) {
+                    return false;
+                }
+
+                $dropForm.addClass("is-busy").removeClass("is-error");
+
+                var formData = new FormData();
+                formData.append($fileInput.attr("name"), file);
+
+                $.ajax({
+                    url: $dropForm.attr("action"),
+                    type: $dropForm.attr("method"),
+                    data: formData,
+                    dataType: "json",
+                    cache: false,
+                    contentType: false,
+                    processData: false,
+                    complete: function () {
+                        $dropForm.removeClass("is-busy");
+                    },
+                    success: function (data) {
+                        $dropForm.addClass("is-complete");
+                        setTimeout(function () {
+                            $dropForm.removeClass("is-complete");
+                        }, 5000);
+                        setUpEditor(file, data.LogContents);
+                    },
+                    error: function () {
+                        $dropForm.addClass("is-error");
+                        alert("An unexpected error occurred.");
+                    }
+                });
+            }
+
             $(ruleList).on("selectmenuchange", function () {
                 var ruleId = $(this).val();
                 var rule = rulesDictionary[ruleId];
-                var resultsList = $("#resultsList");
-                $(resultsList).empty();
 
                 // Remove exising line markers
                 markers.forEach(function (id) {
@@ -231,13 +269,15 @@
                 });
                 markers = [];
 
-                // Add the HTML for each result corresponding to this rule
+                // Set line markers for each result corresponding to this rule
                 rule.results.forEach(function (result) {
-                    $(result.html).appendTo(resultsList);
                     setMarker(result.line);
                 });
 
                 $("#ruleDescription").text(rule.description);
+
+                // Go to the first result
+                editor.gotoLine(rule.results[0].line, 0, true);
             });
 
             $(themeList).on("selectmenuchange", function () {
@@ -266,10 +306,9 @@
                     $(this).val("");
                 }
                 else {
-                    $dropForm.trigger("submit");
+                    submitValidationRequest($(this)[0].files[0]);
                 }
             });
-            var droppedFile = null;
 
             $dropForm.on("click", function (e) {
                 $fileInput[0].click();
@@ -285,70 +324,14 @@
                 $dropForm.removeClass("drop-area-active");
             })
             .on("drop", function (e) {
-                droppedFile = e.originalEvent.dataTransfer.files[0];
-                if (!isSarifFile(droppedFile.name)) {
+                var file = e.originalEvent.dataTransfer.files[0];
+
+                if (!isSarifFile(file.name)) {
                     alert("Only .sarif files are supported.");
                 }
                 else {
-                    var reader = new FileReader();
-                    reader.onload = function () {
-                        if (!editor) {
-                            editor = ace.edit("editor", {
-                                mode: "ace/mode/json",
-                                theme: $(themeList).val(),
-                                selectionStyle: "text",
-                                showPrintMargin: false
-                            });
-                        }
-                        // Get the target file text, excluding the header segment
-                        editor.setValue(atob(reader.result.substring(reader.result.indexOf(',') + 1)));
-                        editor.selection.clearSelection();
-                        $(downloadButton).button("enable");
-                        $(themeList).selectmenu("enable");
-                    };
-                    reader.readAsDataURL(droppedFile);
-                    fileName = droppedFile.name;
-                    $dropForm.trigger("submit");
+                    submitValidationRequest(file);
                 }
-            });
-
-            $dropForm.on("submit", function (e) {
-                // Prevent duplicate submissions
-                if ($dropForm.hasClass("is-busy")) {
-                    return false;
-                }
-
-                $dropForm.addClass("is-busy").removeClass("is-error");
-                e.preventDefault();
-
-                var formData = new FormData();
-                if (droppedFile) {
-                    formData.append($fileInput.attr("name"), droppedFile);
-                }
-
-                $.ajax({
-                    url: $dropForm.attr("action"),
-                    type: $dropForm.attr("method"),
-                    data: formData,
-                    dataType: "json",
-                    cache: false,
-                    contentType: false,
-                    processData: false,
-                    complete: function () {
-                        $dropForm.removeClass("is-busy");
-                    },
-                    success: function (data) {
-                        $dropForm.addClass("is-complete");
-                        setTimeout(function () {
-                            $dropForm.removeClass("is-complete");
-                        }, 5000);
-                        processResults(data.LogContents);
-                    },
-                    error: function () {
-                        $dropForm.addClass("is-error");
-                        alert("An unexpected error occurred.");
-                    }
-                });
             });
         });
     </script>
