--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -35,7 +35,7 @@
                 </button>
                 <div id="resultPosition">
                     <div id="resultPositionCurrent">0</div>
-                    <div id="resultPositionSeparator">&mdash;</div>
+                    <div id="resultPositionSeparator">/</div>
                     <div id="resultPositionCount">0</div>
                 </div>
                 <button id="nextResult" disabled>
