--- a/src/SarifWeb/Content/Validator.css
+++ b/src/SarifWeb/Content/Validator.css
@@ -32,6 +32,7 @@
 }
 
 #leftSide {
+    align-items: flex-start;
     flex: 1;
 }
 
@@ -55,6 +56,7 @@
 
 #ruleDescription {
     align-self: center;
+    width: 100%;
 }
 
 #resultPosition {
@@ -147,7 +149,8 @@
 }
 
 .drop-area.is-busy .drop-area-text-input,
-.drop-area.is-complete .drop-area-text-input {
+.drop-area.is-complete .drop-area-text-input,
+.drop-area.is-error .drop-area-text-input {
     display: none;
 }
 
@@ -156,6 +159,10 @@
 }
 
 .drop-area.is-complete .drop-area-text-complete {
+    display: table-cell;
+}
+
+.drop-area.is-error .drop-area-text-error {
     display: table-cell;
 }
 
@@ -168,37 +175,4 @@
     /*display: none;*/
     padding-bottom: 50px;
     padding-top: 0px;
-}
-
-#responseMessage {
-    font-family: var(--content-font-family);
-    font-size: 12px;
-}
-
-.heading {
-    font-family: var(--content-font-family);
-    font-size: 16px;
-    font-weight: bold;
-}
-
-pre {
-    display: block;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-size: 13px;
-    line-height: 1.428571429;
-    color: #333333;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: #f5f5f5;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-}
-
-code, pre {
-    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-}
-
-pre {
-    white-space: pre-wrap;
 }
